fix: change styling to 'a' elements for better visual contrast

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: whitesmoke;
   text-decoration: inherit;
 }
 a:hover {
@@ -39,6 +39,7 @@ h1 {
 
 .title{
   align-self: flex-start;
+  font-size: 2rem;
 }
 
 #app {
@@ -49,6 +50,8 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 336px;
+  height: 280px;
 }
 
 .logo {
